[FIX] account_reports: btn white space
Prevents the text of a button to go on multiple lines.

closes odoo/enterprise#45497

X-original-commit: f7618dea13f90388cf9844651eeb3c9be21ba30d

--- a/account_reports/static/src/components/account_report/account_report.scss
+++ b/account_reports/static/src/components/account_report/account_report.scss
@@ -165,6 +165,7 @@
         padding: 0;
         text-align: center;
         width: 20px;
+        white-space: nowrap;
 
         &:hover {
             color: $o-enterprise-action-color !important;
